# CIIC4050-Operating-Systems

./: .gitignore
OS/bono/bonus/: CMakeLists.txt
OS/bono/bonus/src/: analyzer.c  generator.c  plot.c
OS/lab1/: .clang-format  .setup.sh.swp  CMakeLists.txt
OS/lab1/Exercise_1/Exercise_1/: CMakeLists.txt
OS/lab1/Exercise_1/__MACOSX/: ._Exercise_1
OS/lab1/Exercise_5/: CMakeLists.txt
OS/lab1/Exercise_5/include/: functions.h
OS/lab1/Exercise_5/src/: functions.c  main.c
OS/lab1/exercise1/: CMakeLists.txt
OS/lab1/exercise1/include/: functions.h
OS/lab1/exercise1/src/: functions.c  main.c
OS/lab1/exercise2/: CMakeLists.txt
OS/lab1/exercise2/include/: functions.h
OS/lab1/exercise2/src/: functions.c  main.c
OS/lab1/exercise3/: CMakeLists.txt
OS/lab1/exercise3/include/: functions.h
OS/lab1/exercise3/src/: functions.c  main.c
OS/lab1/exercise4/: CMakeLists.txt
OS/lab1/exercise4/include/: functions.h
OS/lab1/exercise4/src/: functions.c  main.c
OS/lab1/exercise5/: CMakeLists.txt
OS/lab1/exercise5/include/: functions.h
OS/lab1/exercise5/src/: functions.c  main.c
OS/lab1/exercise6/: CMakeLists.txt
OS/lab1/exercise6/include/: functions.h
OS/lab1/project/: CMakeLists.txt
OS/lab2/: .clang-format  setup.sh
OS/lab2/exercise1/: CMakeLists.txt
OS/lab2/exercise2/: CMakeLists.txt  problemStatement.md
OS/lab2/exercise3/: CMakeLists.txt
OS/lab2/exercise4/: CMakeLists.txt
OS/lab2/exercise4/src/: message_receiver.c  message_sender.c  reader.c  writer.c
OS/lab2/greetings/: CMakeLists.txt
homework1/mouse_data/: CMakeLists.txt
homework1/mouse_data/src/: main.c
homework1/mouse_plotter/: CMakeLists.txt
homework1/mouse_plotter/include/: functions.h
homework1/mouse_plotter/src/: functions.c  main.c
homework1/mouse_saver/: CMakeLists.txt
homework1/mouse_saver/include/: functions.h
homework1/mouse_saver/src/: functions.c  main.c
(+16 files in other folders)
